add to css and html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Project Section</title>
+    <link rel="stylesheet" type="text/css" href="asset/style.css" >
 </head>
 
 <body>
+
+    <section id="project">
+         <div class="project-heading">
+            <span>Let's See My Work</span>
+            <h3>My Projects</h3>
+         </div>
+    </section>
 
 </body>
 
