--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
             <span>Let's See My Work</span>
             <h3>My Projects</h3>
          </div>
+
+         <ul class="project-filter">
+                <li class="list project-filter-active">All</li>
+                <li class="list">Appliction</li>
+                <li class="list">App Desing</li>
+                <li class="list">Website Desing</li>
+                <li class="list">Ai</li>
+         </ul>
+
+
     </section>
+
+    <!-- using jquery -->
 
 </body>
 
